<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nastavení typu škály"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/Split_color"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <RadioButton
                            android:id="@+id/radio_button_one_five"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scaleOneFive"
                            android:textSize="18dp"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:id="@+id/radio_button_a_f"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scaleAF"
                            android:textSize="18dp"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:id="@+id/radio_button_one_four"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scaleOneFour"
                            android:textSize="18dp"
                            android:onClick="onRadioButtonClicked"/>

                    </LinearLayout>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Obnovit do výchozího nastavení"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/buttonResetAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/Split_color"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:onClick="onRadioButtonClicked"
            android:focusable="true">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Budiž vše smazáno"
                    android:background="#00BBBBBB"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"

                />
        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Změna barviček"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textSize="24sp"/>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>