<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/background"
            android:padding="2dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/markOneBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/mark_1"
                            app:cardCornerRadius="20dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:onClick="onMarkButtonClick"
                            android:outlineSpotShadowColor="@color/background">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="6dp"
                                            android:fontFamily="sans-serif-black"
                                            android:gravity="center"
                                            android:text="@string/mark_1"
                                            android:textColor="@color/black"
                                            android:textSize="24sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />
                                </LinearLayout>
                        </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/markTwoBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/mark_2"
                            app:cardCornerRadius="20dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:onClick="onMarkButtonClick"
                            android:outlineSpotShadowColor="@color/background">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="6dp"
                                            android:fontFamily="sans-serif-black"
                                            android:gravity="center"
                                            android:text="@string/mark_2"
                                            android:textColor="@color/black"
                                            android:textSize="24sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />
                                </LinearLayout>
                        </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/markThreeBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/mark_3"
                            app:cardCornerRadius="20dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:onClick="onMarkButtonClick"
                            android:outlineSpotShadowColor="@color/background">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="6dp"
                                            android:fontFamily="sans-serif-black"
                                            android:gravity="center"
                                            android:text="@string/mark_3"
                                            android:textColor="@color/black"
                                            android:textSize="24sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />
                                </LinearLayout>
                        </androidx.cardview.widget.CardView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/markFourBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/mark_4"
                            app:cardCornerRadius="20dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:onClick="onMarkButtonClick"
                            android:outlineSpotShadowColor="@color/background">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="6dp"
                                            android:fontFamily="sans-serif-black"
                                            android:gravity="center"
                                            android:text="@string/mark_4"
                                            android:textColor="@color/black"
                                            android:textSize="24sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="12dp"
                                            android:gravity="center"
                                            android:text="xy b."
                                            android:textColor="@color/black"
                                            android:textSize="18sp" />
                                </LinearLayout>
                        </androidx.cardview.widget.CardView>

                </LinearLayout>

        </LinearLayout>

</LinearLayout>
