<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/Split_color"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/mark_1"
                    app:cardCornerRadius="20dp"

                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/mark_1"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

                <!-- Nejde mi to dostat do prostředka z pohledu vertikality-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="100%"
                            android:inputType="numberDecimal"
                            android:layout_margin="2dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/mark_1"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/markOneBottomProcentage"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="91%"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/mark_3"
                    app:cardCornerRadius="20dp"

                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/mark_2"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

                <!-- Nejde mi to dostat do prostředka z pohledu vertikality-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="90%"
                            android:inputType="numberDecimal"
                            android:layout_margin="2dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/mark_3"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/markTwoBottomProcentage"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="81%"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/mark_4"
                    app:cardCornerRadius="20dp"

                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/mark_3"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

                <!-- Nejde mi to dostat do prostředka z pohledu vertikality-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="80%"
                            android:inputType="numberDecimal"
                            android:layout_margin="2dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/mark_4"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/markThreeBottomProcentage"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="71%"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/mark_5"
                    app:cardCornerRadius="20dp"

                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/mark_4"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

                <!-- Nejde mi to dostat do prostředka z pohledu vertikality-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="70%"
                            android:inputType="numberDecimal"
                            android:layout_margin="2dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </androidx.cardview.widget.CardView>
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/mark_5"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/markFourBottomProcentage"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="0%"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>